--- a/project.config.json
+++ b/project.config.json
@@ -31,12 +31,20 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "分类",
 					"pathName": "pages/category/main",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 1,
+					"name": "商品详情",
+					"pathName": "pages/goods_detail/main",
+					"query": "goods_id=129",
 					"scene": null
 				}
 			]
