--- a/project.config.json
+++ b/project.config.json
@@ -31,7 +31,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -45,6 +45,13 @@
 					"name": "商品详情",
 					"pathName": "pages/goods_detail/main",
 					"query": "goods_id=129",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "购物车",
+					"pathName": "pages/shopcar/main",
+					"query": "",
 					"scene": null
 				}
 			]
