完成购物车页面功能

--- a/src/app.json
+++ b/src/app.json
@@ -4,6 +4,7 @@
     "pages/category/main",
     "pages/shopcar/main",
     "pages/mine/main",
+    "pages/pay/main",
     "pages/goods_detail/main"
     
     
